--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "serve": "^14.2.0"
+    "http-server": "^14.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
